adding styles and fixing bugs for user gear display

--- a/app/guitars/partials/advancedSearch.html
+++ b/app/guitars/partials/advancedSearch.html
@@ -1,6 +1,5 @@
 <div ng-include="'app/userGear/partials/userNav.html'"></div>
 
-
 <div class="advancedSearchContentWrapper">
    
     <div class="advancedSearchDivWrapper">
@@ -174,7 +173,7 @@
 
                         <div class="mainPricesTitleWrapper">
 
-                            <div class="generalTitleClass" ng-if="isItTrue(prices.avgPrice) && isItTrue(prices.lowPrice) && prices.lowPrice !== prices.highPrice">
+                            <div class="generalTitleClass" ng-if="isItTrue(prices.avgPrice) && isItTrue(prices.lowPrice) && prices.lowPrice != prices.highPrice">
                                 General Prices
                             </div>
 
