--- a/css/basicSearch.css
+++ b/css/basicSearch.css
@@ -44,7 +44,6 @@
     grid-area: search;
     align-self: center;
     text-align: center;
-    background-color: #FFF;
     justify-self: center;
     padding: 0 2em 0 2em;
     border-right: .3em solid rgba(216, 216, 216, 0.959);
@@ -184,7 +183,7 @@
     justify-self: center;
     align-self: center;
     text-align: center;
-    background-color: #FFF;
+    background-color: #ffffffde;
 }
 
 .basicSearchWrapper {
@@ -213,44 +212,44 @@
     grid-area: advButton;
     align-self: center;
     justify-self: center;
-    background-color: #FFF;
+    background-color: #fff0;
     outline: none;
     overflow: hidden;
-    padding: .5em;
+    padding: .3em;
     cursor: pointer;
     user-select: none;
     text-align: center;
     white-space: nowrap;
     text-decoration: none;
     text-transform: none;
-    color: rgb(111, 225, 253);
-    border: solid .3em rgb(111, 225, 253);
-    border-radius: 4px;
-    font-size: .9em;
+    color: rgb(111, 137, 255);
+    border: solid .3em rgb(111, 137, 255);
+    border-radius: .4em;
+    font-size: 1.2em;
     font-weight: 900;
     line-height: .8em;
     width: 7em;
 }
 
 .toAdvancedSearchButton {
-    margin-top: 1.3em;
+    margin-top: 1.1em;
     grid-area: advButton;
     align-self: center;
     justify-self: center;
-    background-color: #FFF;
+    background-color: #fff0;
     outline: none;
     overflow: hidden;
-    padding: .5em;
+    padding: .3em;
     cursor: pointer;
     user-select: none;
     text-align: center;
     white-space: nowrap;
     text-decoration: none;
     text-transform: none;
-    color: rgb(111, 225, 253);
-    border: solid .3em rgb(111, 225, 253);
-    border-radius: 4px;
-    font-size: .9em;
+    color: rgb(111, 137, 255);
+    border: solid .3em rgb(111, 137, 255);
+    border-radius: .4em;
+    font-size: 1.2em;
     font-weight: 900;
     line-height: .8em;
     width: 11em;
