--- a/css/navBar.css
+++ b/css/navBar.css
@@ -1,7 +1,7 @@
 .navGrid {
     display: grid;
     max-height: 4em;    
-    background-color: #FFF;
+    background-color: rgba(0, 55, 255, 0.6);
     margin-top: -1em;
     padding-bottom: 2.5em;
     border-bottom: .3em solid rgba(216, 216, 216, 0.959);
@@ -55,7 +55,7 @@
     justify-self: center;
     font-size: 1.6em; 
     font-weight: 900;
-    color: rgba(155, 155, 155, 0.952);
+    color: rgba(35, 35, 35, 0.92);
 }
 
 .logoImg {
@@ -122,9 +122,10 @@
 }
 
 .logOutButtonClass {
-    background-color: #FFF;
+    background-color: rgba(0, 55, 255, 0.1);
     outline: none;
     overflow: hidden;
+    margin-right: 1em;
     padding: .5em;
     cursor: pointer;
     user-select: none;
@@ -132,19 +133,20 @@
     white-space: nowrap;
     text-decoration: none;
     text-transform: none;
-    color: rgb(111, 225, 253);
-    border: solid .3em rgb(111, 225, 253);
-    border-radius: 4px;
-    font-size: .9em;
+    color: rgb(42, 45, 54);
+    border: solid .3em rgb(58, 66, 105);
+    border-radius: .4em;
+    font-size: 1.2em;
     font-weight: 900;
     line-height: .8em;
     width: 6em;
 }
 
 .logOutButtonClass:hover {
-    background-color: #FFF;
+    background-color: rgba(0, 55, 255, 0.1);
     outline: none;
     overflow: hidden;
+    margin-right: 1em;
     padding: .5em;
     cursor: pointer;
     user-select: none;
@@ -152,10 +154,10 @@
     white-space: nowrap;
     text-decoration: none;
     text-transform: none;
-    color: rgba(111, 225, 253, 0.678);
-    border: solid .3em rgba(111, 225, 253, 0.678);
-    border-radius: 4px;
-    font-size: .9em;
+    color: rgb(217, 217, 217);
+    border: solid .3em rgb(217, 217, 217);
+    border-radius: .4em;
+    font-size: 1.2em;
     font-weight: 900;
     line-height: .8em;
     width: 6em;
