--- a/css/userNav.css
+++ b/css/userNav.css
@@ -17,7 +17,6 @@
     border-bottom: .3em solid rgba(216, 216, 216, 0.959);
     max-height: 4em;
     grid-column-gap: 1em;
-    background-color: #FFF;
     grid-area: userNavBar;
     grid-template-columns: 1fr 2fr 1fr 2fr 1fr 2fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
@@ -47,7 +46,7 @@
 }
 
 .searchForPricesButton {
-    background-color: #FFF;
+    background-color: #FFF0;
     outline: none;
     overflow: hidden;
     padding: .5em;
@@ -57,17 +56,17 @@
     white-space: nowrap;
     text-decoration: none;
     text-transform: none;
-    color: rgb(111, 225, 253);
-    border: solid .3em rgb(111, 225, 253);
-    border-radius: 4px;
-    font-size: .9em;
+    color: rgb(111, 137, 255);
+    border: solid .3em rgb(111, 137, 255);
+    border-radius: .4em;
+    font-size: 1.2em;
     font-weight: 900;
-    line-height: .8em;
+    line-height: .9em;
     width: 11em;
 }
 
 .searchForPricesButton:hover {
-    background-color: #FFF;
+    background-color: #FFF0;
     outline: none;
     overflow: hidden;
     padding: .5em;
@@ -77,17 +76,17 @@
     white-space: nowrap;
     text-decoration: none;
     text-transform: none;
-    color:  rgba(111, 225, 253, 0.644);
-    border: solid .3em rgba(111, 225, 253, 0.644);
-    border-radius: 4px;
-    font-size: .9em;
+    color: rgb(111, 137, 255);
+    border: solid .3em rgb(111, 137, 255);
+    border-radius: .4em;
+    font-size: 1.2em;
     font-weight: 900;
-    line-height: .8em;
+    line-height: .9em;
     width: 11em;
 }
 
 .showYourGuitarsButton {
-    background-color: #FFF;
+    background-color: #FFF0;
     outline: none;
     overflow: hidden;
     padding: .5em;
@@ -97,17 +96,17 @@
     white-space: nowrap;
     text-decoration: none;
     text-transform: none;
-    color: rgb(111, 225, 253);
-    border: solid .3em rgb(111, 225, 253);
-    border-radius: 4px;
-    font-size: .9em;
+    color: rgb(111, 137, 255);
+    border: solid .3em rgb(111, 137, 255);
+    border-radius: .4em;
+    font-size: 1.2em;
     font-weight: 900;
-    line-height: .8em;
+    line-height: .9em;
     width: 11em;
 }
 
 .showYourGuitarsButton:hover {
-    background-color: #FFF;
+    background-color: #fff0;
     outline: none;
     overflow: hidden;
     padding: .5em;
@@ -117,17 +116,17 @@
     white-space: nowrap;
     text-decoration: none;
     text-transform: none;
-    color:  rgba(111, 225, 253, 0.644);
-    border: solid .3em  rgba(111, 225, 253, 0.644);
-    border-radius: 4px;
-    font-size: .9em;
+    color: rgb(111, 137, 255);
+    border: solid .3em rgb(111, 137, 255);
+    border-radius: .4em;
+    font-size: 1.2em;
     font-weight: 900;
-    line-height: .8em;
+    line-height: .9em;
     width: 11em;
 }
 
 .enterNewGuitarButton {
-    background-color: #FFF;
+    background-color: #fff0;
     outline: none;
     overflow: hidden;
     padding: .5em;
@@ -137,17 +136,17 @@
     white-space: nowrap;
     text-decoration: none;
     text-transform: none;
-    color: rgb(111, 225, 253);
-    border: solid .3em rgb(111, 225, 253);
-    border-radius: 4px;
-    font-size: .9em;
+    color: rgb(111, 137, 255);
+    border: solid .3em rgb(111, 137, 255);
+    border-radius: .4em;
+    font-size: 1.2em;
     font-weight: 900;
-    line-height: .8em;
+    line-height: .9em;
     width: 11em;
 }
 
 .enterNewGuitarButton:hover {
-    background-color: #FFF;
+    background-color: #fff0;
     outline: none;
     overflow: hidden;
     padding: .5em;
@@ -157,11 +156,11 @@
     white-space: nowrap;
     text-decoration: none;
     text-transform: none;
-    color:  rgba(111, 225, 253, 0.644);
-    border: solid .3em rgba(111, 225, 253, 0.644);
-    border-radius: 4px;
-    font-size: .9em;
+    color: rgb(111, 137, 255);
+    border: solid .3em rgb(111, 137, 255);
+    border-radius: .4em;
+    font-size: 1.2em;
     font-weight: 900;
-    line-height: .8em;
+    line-height: .9em;
     width: 11em;
 }
